# NK-model-reprise

./: .gitignore  README.md  pyproject.toml
nk_core/: Cargo.toml
nk_core/src/: deformation.rs  dynamics.rs  energy.rs  lattice.rs  lib.rs
scripts/: analyze_trajectories.py  energy_convergence.py  generate_disorders.py  order_parameter_evolution.py  phase_diagram.py  run_trajectories.py  scaling_analysis.py  validate_physics.py
