[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nk-model-2025"
version = "0.1.0"
description = "NK model simulation for phase transition characterization"
authors = [{name = "Davide Fiocco"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipython>=7.0",
]

[tool.maturin]
python-source = "python"
module-name = "nk_core"
manifest-path = "nk_core/Cargo.toml"


