[package]
name = "nk_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nk_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
